; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_extent.c_extent_activate_locked.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_extent.c_extent_activate_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@extent_state_active = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32*)* @extent_activate_locked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @extent_activate_locked(i32* %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32*, i32** %8, align 8
  %10 = call i64 @extent_arena_ind_get(i32* %9)
  %11 = load i32*, i32** %6, align 8
  %12 = call i64 @arena_ind_get(i32* %11)
  %13 = icmp eq i64 %10, %12
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = load i32*, i32** %8, align 8
  %17 = call i64 @extent_state_get(i32* %16)
  %18 = load i32*, i32** %7, align 8
  %19 = call i64 @eset_state_get(i32* %18)
  %20 = icmp eq i64 %17, %19
  %21 = zext i1 %20 to i32
  %22 = call i32 @assert(i32 %21)
  %23 = load i32*, i32** %5, align 8
  %24 = load i32*, i32** %7, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = call i32 @eset_remove_locked(i32* %23, i32* %24, i32* %25)
  %27 = load i32*, i32** %8, align 8
  %28 = load i32, i32* @extent_state_active, align 4
  %29 = call i32 @extent_state_set(i32* %27, i32 %28)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @extent_arena_ind_get(i32*) #1

declare dso_local i64 @arena_ind_get(i32*) #1

declare dso_local i64 @extent_state_get(i32*) #1

declare dso_local i64 @eset_state_get(i32*) #1

declare dso_local i32 @eset_remove_locked(i32*, i32*, i32*) #1

declare dso_local i32 @extent_state_set(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
